===v6.1.3===
 * New icon type: Swing Timer.
 * New conditions: Swing Timer - Main Hand; Swing Timer - Off Hand.
 * Added textures to the icon type select menu.
 * All pre-MoP compatibility code has been removed.
 * You can now use item slot IDs as dynamic Custom Texture values. Syntax is {{{$item.1}}}, where 1 is the item slot ID (1-19) that you want to use.
 
 * Bug Fixes:
 ** Text from the Text Displays module should now always appear above all other icon elements.
 ** Fixed: {{{Core\Conditions\Categories\PlayerAttributes.lua:60: attempt to call upvalue "GetInstanceDifficulty" (a nil value) }}}
 ** The ALPHA_STACKREQ and ALPHA_DURATIONREQ data processor hooks should now properly trigger the TMW_ICON_UPDATED event when their state changes, which will allow meta icons (that check icons that implement these hooks) to properly update as needed.
 ** The "Talent learned", "Glyph active", and "Tracking active" conditions should now always update properly when checked in a condition set where there are OnUpdate driven conditions in a higher position than these conditions.
 ** Editboxes will no longer have their test reset if they are focused and have unsaved changes when a non-editbox setting is changed.

===v6.1.2===
 * Added a new tag [LocType] to display the category of loss of control icon types.
 * New slash command for changing profiles: /tmw profile "Profile Name"
 * Animations can now be anchored to different components of an icon (when appropriate).
 
 * Bug Fixes:
 ** Designed a new protocol for sharing class spells to prevent the old version of it that was dramatically errored from leaking into a new version of it.
 ** --LastUpdateTime-type values should now only be set after an update completes so that in the event of a "script ran too long" error, the update will be ran again in the next cycle.--
 ** Icon Color Flash animations should now work correctly.