@@ -757,6 +757,8 @@ L["UIPANEL_FONTFACE"] = "Font Face"
 L["UIPANEL_FONT_DESC"] = "Chose the font to be used by the stack text on icons."
 L["UIPANEL_FONT_SIZE"] = "Font Size"
 L["UIPANEL_FONT_SIZE_DESC"] = "Change the size of the font used for stack text on icons. If Masque is used and the set skin has a font size defined, then this value will be ignored."
+L["UIPANEL_FONT_SHADOW"] = "Shadow Offset"
+L["UIPANEL_FONT_SHADOW_DESC"] = "Change the offset amount of the shadow behind the text. Set to zero to disable the shadow."
 L["UIPANEL_FONT_OUTLINE"] = "Font Outline"
 L["UIPANEL_FONT_OUTLINE_DESC"] = "Sets the outline style for the stack text on icons."
 L["OUTLINE_NO"] = "No Outline"
