@@ -4,13 +4,14 @@
  * Added textures to the icon type select menu.
  * All pre-MoP compatibility code has been removed.
  * You can now use item slot IDs as dynamic Custom Texture values. Syntax is {{{$item.1}}}, where 1 is the item slot ID (1-19) that you want to use.
+ * Added a setting to customize the shadow on text displays.
  
  * Bug Fixes:
  ** Text from the Text Displays module should now always appear above all other icon elements.
  ** Fixed: {{{Core\Conditions\Categories\PlayerAttributes.lua:60: attempt to call upvalue "GetInstanceDifficulty" (a nil value) }}}
  ** The ALPHA_STACKREQ and ALPHA_DURATIONREQ data processor hooks should now properly trigger the TMW_ICON_UPDATED event when their state changes, which will allow meta icons (that check icons that implement these hooks) to properly update as needed.
  ** The "Talent learned", "Glyph active", and "Tracking active" conditions should now always update properly when checked in a condition set where there are OnUpdate driven conditions in a higher position than these conditions.
- ** Editboxes will no longer have their test reset if they are focused and have unsaved changes when a non-editbox setting is changed.
+ ** Editboxes will no longer have their text reset if they are focused and have unsaved changes when a non-editbox setting is changed.
 
 ===v6.1.2===
  * Added a new tag [LocType] to display the category of loss of control icon types.
